# amazing_hunting

./: pyproject.toml
amazing_hunting/: settings.py  urls.py
authentication/: models.py  permissions.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: urls.py  views.py
companies/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  simple_test.py
tests/vacancy/: vacancy_create_test.py  vacancy_list_test.py  vacancy_retreieve_test.py
vacancies/: models.py  serializers.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_vacancy_likes.py  0007_vacancy_min_experience.py  0008_vacancy_update_at.py
